--- a/css/nav.css
+++ b/css/nav.css
@@ -26,6 +26,7 @@ nav {
   display: flex;
   justify-content: space-around;
   width: 55%;
+  list-style: none;
 }
 .nav-links li {
   list-style: none;
@@ -62,17 +63,18 @@ nav {
   body {
     overflow-x: hidden;
   }
+
   .nav-links {
     position: absolute;
     right: 0;
-    height: 92vh;
-    top: 8vh;
+    height: 90vh;
+    top: 10vh;
     background-color: #364e8b;
     flex-direction: column;
     align-items: center;
     width: 50%;
     transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    transition: transform 0.6s ease-in;
   }
 
   .nav-links li {
@@ -82,16 +84,18 @@ nav {
   .burger {
     display: block;
   }
+
 }
 
 @keyframes navLinksFade {
   0% {
     opacity: 0;
-    transform: translateX(50px);
+    transform: translateY(-25px);
   }
   100% {
     opacity: 1;
-    transform: translateX(0px);
+    transform: translateY(0px);
+    background-color: #364e8b;
   }
 }
 
