--- a/css/nav.css
+++ b/css/nav.css
@@ -68,6 +68,7 @@ nav {
     height: 89vh;
     top: 11vh;
     background-color: #364e8b;
+  　border-radius: 50px 0px 0px 50px;
     flex-direction: column;
     align-items: center;
     width: 50%;
